Termindo modulo de roles y agregando modulo de users y conectarlo con postgressql

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,20 @@
+#Secret jwt
 SECRET=
-POSTGRES_PASSWORD=
+
+#DB type
+TYPE_DB=
+
+
+#Env db postgres
 POSTGRES_DB=
 POSTGRES_HOST=
-PGADMIN_PORT=
+POSTGRES_USERNAME=
+POSTGRES_PASSWORD=
+POSTGRES_DATA=
+POSTGRES_PORT=
+
+
+#Env pgadmin 4
 PGADMIN_DEFAULT_EMAIL=
 PGADMIN_DEFAULT_PASSWORD=
 PGADMIN_PORT=
